[gd_scene load_steps=3 format=3 uid="uid://b5vjlu8vqlssn"]

[ext_resource type="Script" uid="uid://bw58wuf6j8mr6" path="res://worldElement/boxes/baseBox.gd" id="1_6afeh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cr83e"]
size = Vector3(1.09521, 1.11414, 1)

[node name="BaseBox" type="RigidBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6afeh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("BoxShape3D_cr83e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
